Fixed css display to prevent text from overflowing outside of .userInput

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@
   text-align: right;
   line-height: 30px;
 
-  overflow: auto;
+  white-space: nowrap;
+  direction: rtl;
 }
 
 .display .reset {
